added assets for Mockup page

--- a/mockups.html
+++ b/mockups.html
@@ -112,10 +112,8 @@
                     congue a
                     mattis nec, fermentum sit amet leo.</p>
 
-                <a class='button' href="https://blackieministorage.com"><i class="fas fa-external-link-alt"></i>Live
-                    Site</a>
-                <a class='button' href="https://astranomaly.com/bms-wordpress/"><i
-                        class="fab fa-wordpress"></i>Wordpress Demo</a>
+                <a class='button' href="https://voxmotu.voidlike.com/"><i class="fas fa-external-link-alt"></i>Review Site Design</a>
+                <a class='button' href="./dales-thoughts/"><i class="fas fa-external-link-alt"></i>Blog Design</a>
 
             </div>
         </section>
@@ -131,23 +129,20 @@
                 <div class="row">
                     <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-storage-big.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-big.jpg" alt="Blackie Mini Storage desktop view" /></a>
+                            <a href="images/sc-mockup-mbbq.jpg" class="image fit gallery"><img src="images/sc-mockup-mbbq.jpg" alt="Fake webpage for a class project: SALSA Reader" /></a>
                         </figure>
                     </div>
 
                     <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-storage-detail.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-detail.jpg"
-                                    alt="Detail view of the Blackie Mini Storage website" /></a>
+                            <a href="images/sc-mockup-salsa.png" class="image fit gallery"><img src="images/sc-mockup-salsa.png"
+                                    alt="Blackie Mini Storage tablet menu" /></a>
                         </figure>
                     </div>
 
                     <div class="4u$ 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-storage-small.jpg" class="image fit gallery"><img
-                                    src="images/sc-storage-small.jpg" alt="Blackie Mini Storage tablet menu" /></a>
+                            <a href="images/sc-mockup-pb.png" class="image fit gallery"><img src="images/sc-mockup-pb-th.jpg" alt="Class project to design a website for a fake client: Phoenix Books" /></a>
                         </figure>
                     </div>
                 </div>
