updated Mockups page

--- a/mockups.html
+++ b/mockups.html
@@ -58,7 +58,7 @@
                             class="label">Twitter</span></a></li>
                 <li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span
                             class="label">LinkedIn</span></a></li>
-                <li><a href="mailto:hi@theoutpost.dev" title="email" class="icon fa-envelope"><span
+                <li><a href="mailto:hi@theoutpost.dev" target="_blank" rel="noopener noreferrer" title="email" class="icon fa-envelope"><span
                             class="label">Email</span></a>
                 </li>
             </ul>
@@ -90,27 +90,12 @@
                     <h2>Information</h2>
                 </header>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum orci libero, dictum sed augue id, mattis rutrum
-                    augue. Duis convallis commodo placerat. Donec sed ultrices urna. Fusce at turpis erat. Curabitur eu tempor turpis,
-                    vel
-                    varius justo. Sed laoreet mauris nec augue euismod, ac tempus magna fermentum. Vestibulum et justo et felis
-                    consequat
-                    sodales. Integer elit lectus, tincidunt sed semper sit amet, posuere in nunc. Nunc sed justo arcu. Nulla finibus
-                    molestie ligula, sed scelerisque libero tincidunt vel. In pellentesque dictum faucibus. Vivamus ornare lectus et
-                    tellus
-                    sagittis, id aliquet nibh ultricies. Cras ultrices dictum odio ut accumsan. Phasellus dapibus metus magna, ut
-                    efficitur
-                    ex efficitur sed. Aliquam ut malesuada mauris. Morbi in lobortis massa, vitae aliquet libero.</p>
+                <p>During my schooling it was often necessary to mockup a site for a (sometimes nonexistent) client or to create a quick, functional website as a landing page for some other school project. While these websites may not have needed to reach a fully-polished state of presentation, they still demonstrate an important aspect of the front-<span class="nbs">end environment.</span></p>
+
+                <p>Occasionally, I'll create mockups for my own personal projects. The review site that my friends and I intermittently update runs on <a href="https://wordpress.org/">Wordpress</a> using a premade theme. As an experiment, I mocked up a new design for it and created an interactive (though non-functional) demo website, linked below.</p>
 
                 <h3>Technologies</h3>
-                <p>Pellentesque pharetra suscipit nisi vel placerat. In vitae libero ut orci maximus fermentum. Nunc ac nulla eget enim
-                    efficitur egestas nec vitae nunc. Mauris sagittis finibus sagittis. Duis posuere nisi metus, eget placerat ipsum
-                    rhoncus
-                    at. Morbi nec porta quam. Duis ornare ornare ligula. Nam commodo pellentesque urna sit amet viverra. Duis eget
-                    congue
-                    dolor, in facilisis quam. Etiam neque ligula, tincidunt ac rhoncus in, pulvinar nec ex. Pellentesque quam dui,
-                    congue a
-                    mattis nec, fermentum sit amet leo.</p>
+                <p>All webpage mockups linked or mentioned on this page were initially wireframed with pencil <span class="fancy">&amp;</span> paper, then designed in Adobe Photoshop. These days Affinity Designer is used for all designs <span class="nbs">and mockups.</span></p>
 
                 <a class='button' href="https://voxmotu.voidlike.com/"><i class="fas fa-external-link-alt"></i>Review Site Design</a>
                 <a class='button' href="./dales-thoughts/"><i class="fas fa-external-link-alt"></i>Blog Design</a>
