--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<li><a href="https://pixelfed.social/Vesper" title="pixelfed" class="icon fa-instagram"><span class="label">Photos</span></a></li>
 							<li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:hi@theoutpost.dev" title="email" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:hi@theoutpost.dev" target="_blank" rel="noopener noreferrer" title="email" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -181,7 +181,7 @@
 
 							<p>Hey, if you want to get in touch&mdash;be it for freelance work, an employee position, or just to talk about cool
                             ideas&mdash;feel free to send me an email, anytime.</p>
-                            <h3><a href="mailto:hi@theoutpost.dev">hi@theoutpost.dev</a></h3>
+                            <h3><a href="mailto:hi@theoutpost.dev" target="_blank" rel="noopener noreferrer">hi@theoutpost.dev</a></h3>
 						</div>
 					</section>
 
