--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="https://github.com/astranomaly" title="github" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://pixelfed.social/Vesper" title="pixelfed" class="icon fa-instagram"><span class="label">Photos</span></a></li>
+							<li><a href="https://www.flickr.com/photos/169764173@N04/" title="flickr" class="icon fa-instagram"><span class="label">Photos</span></a></li>
 							<li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:hi@theoutpost.dev" target="_blank" rel="noopener noreferrer" title="email" class="icon fa-envelope"><span class="label">Email</span></a></li>
@@ -82,20 +82,22 @@
 								<h2>Portfolio</h2>
                             </header>
 
+                            <!-- TODO: add Landman link -->
+                            <!-- TODO: remove TWIB link -->
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item code">
-										<a href="userscripts.html" class="image fit"><img src="images/userscripts.jpg" alt="" /></a>
+										<a href="landman.html" class="image fit"><img src="images/landman.jpg" alt="" /></a>
 										<header>
-											<h3>Userscript Experiments</h3>
+											<h3>Landman</h3>
 										</header>
 									</article>
-									<article class="item design">
-										<a href="design.html" class="image fit"><img src="images/carpentry.jpg" alt="" /></a>
-										<header>
-											<h3>Graphic Design</h3>
-										</header>
-									</article>
+                                    <article class="item code">
+                                        <a href="userscripts.html" class="image fit"><img src="images/userscripts.jpg" alt="" /></a>
+                                        <header>
+                                            <h3>Userscript Experiments</h3>
+                                        </header>
+                                    </article>
 								</div>
 
 								<div class="4u 12u$(mobile)">
@@ -105,10 +107,10 @@
 											<h3>Max Q Live</h3>
 										</header>
 									</article>
-                                    <article class="item code">
-                                        <a href="twib.html" class="image fit"><img src="images/twib.jpg" alt="" /></a>
+                                    <article class="item design">
+                                        <a href="design.html" class="image fit"><img src="images/carpentry.jpg" alt="" /></a>
                                         <header>
-                                            <h3>the.weather.is.beautiful</h3>
+                                            <h3>Graphic Design</h3>
                                         </header>
                                     </article>
 								</div>
@@ -120,12 +122,12 @@
                                             <h3>Blackie Mini Storage</h3>
                                         </header>
                                     </article>
-									<article class="item design">
-										<a href="mockups.html" class="image fit"><img src="images/vox.jpg" alt="" /></a>
-										<header>
-											<h3>Web Mockups</h3>
-										</header>
-									</article>
+                                    <article class="item code">
+                                        <a href="twib.html" class="image fit"><img src="images/twib.jpg" alt="" /></a>
+                                        <header>
+                                            <h3>the.weather.is.beautiful</h3>
+                                        </header>
+                                    </article>
 								</div>
 							</div>
 
