--- a/landman.html
+++ b/landman.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>The Outpost | Blackie Mini Storage</title>
+		<title>The Outpost | Landman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -63,12 +63,12 @@
 			<div id="main">
 
 				<!-- Intro -->
-					<section id="top" class="one dark cover storage">
+					<section id="top" class="one dark cover landman">
 						<div class="container">
 
 							<header>
-								<h2>Blackie Mini Storage</h2>
-								<p>A small, responsive website for a small, <span class='nbs'>rural business</span></p>
+								<h2>Landman</h2>
+								<p>A modern, mobile-responsive <span class="nbs">landing page</span></p>
                             </header>
 
 						</div>
@@ -82,21 +82,16 @@
 								<h2>Information</h2>
 							</header>
 
-                            <p><strong>Blackie Mini Storage</strong> is a small company in rural Alberta, providing shipping containers for long-term storage. I was contacted by them and asked to make a simple, clean website that would display nicely on any screen size. It's not a content-heavy site by any means; it's simply to give <strong>Blackie Mini Storage</strong> a web presence, and allow people to find or contact them
-                            more easily.</p>
-
-							<p>It may be a small detail, but I'm really proud of the "Directions" button and how its behavior and presentation are adjusted according to the device being used. It's not something that would normally be noticed if you weren't looking for it.</p>
+                            <p><strong>Landman</strong> is a locally owned and operated construction company focusing on earthworks such as excavation and landscaping. I was contacted by <strong>Landman</strong> to design a simple, modern website with a strong focus on images rather than text. Additionally, I was tasked with designing new branding &amp; business cards for the company to match the design of <span class="nbs">the website.</span></p>
 
 							<h3>Technologies</h3>
-                            <p>After a year of experimenting with preprocessors, this was my first finished website preprocessed with <span class="nbs"><a href="https://pugjs.org/"> Pug (aka. Jade)</a></span> and <a href="https://sass-lang.com/">Sass</a>. It was also the first fully responsive website I had build from scratch, as that had somehow not been part of my school curriculum&hellip; It's always an exciting experience to transition from "learning" to "applying".</p>
+                            <p>After practicing <a href="https://www.typescriptlang.org/">TypeScript</a> in my personal projects over the past few months, this website is officially the first commercial project I've done using the stricter-but-safer flavor <span class="nbs">of JavaScript.</span></p>
 
-                            <p>The responsive framework uses the <a href="https://www.bourbon.io/">Bourbon</a> <span class="fancy">&amp;</span> <a href="https://neat.bourbon.io/">Neat</a> Sass libraries, while the interactive map uses the <a href="https://cloud.google.com/maps-platform/">Google Maps API</a>.
-                            Fonts and icons use <a href="https://fonts.google.com/">Google Fonts</a> and <a href="https://fontawesome.com/">Font Awesome</a> respectively.</p>
+                            <p>As always, the responsive framework uses <a href="https://sass-lang.com/">Sass</a> for styling, but no external libraries were used to create the layout this time. Instead, the site is built using CSS3's Flexbox feature with just a few media breakpoints as needed. Automated compiling of Sass &amp; TypeScript was achieved through <a href="https://gulpjs.com/">Gulp</a>. Fonts are provided by <a href="https://fonts.google.com/">Google Fonts</a> and the slideshow uses the <a href="https://flickity.metafizzy.co/">Flickity</a> slider since it's both mobile-friendly and <span class="nbs">pure JavaScript.</span></p>
 
-                            <p>In order to teach myself <a href="https://wordpress.org/">Wordpress</a>, I also created a one-page template duplicating the site. While the front-end remains the same, the backend is powered by Wordpress. (The Google Maps plugin hasn't been updated for this version, however).</p>
+                            <p>All site graphics were done using <a href="https://affinity.serif.com/en-gb/">Affinity Designer &amp; Photo</a>. The icons and logos were then exported as <span class="nbs">SVG elements.</span></p>
 
-                            <a class='button' href="https://blackieministorage.com"><i class="fas fa-external-link-alt"></i>Live Site</a>
-                            <a class='button' href="https://astranomaly.com/bms-wordpress/"><i class="fab fa-wordpress"></i>Wordpress Demo</a>
+                            <a class='button' href="https://landmanltd.com"><i class="fas fa-external-link-alt"></i>Live Site</a>
 
 						</div>
 					</section>
@@ -109,22 +104,22 @@
 								<h2>Screenshots</h2>
 							</header>
 
-							<div class="row">
+							<div class="row"><!-- FIXME: swap photos -->
 								<div class="4u 12u$(mobile)">
 									<figure class="item">
-										<a href="images/sc-storage-big.jpg" class="image fit gallery"><img src="images/sc-storage-big.jpg" alt="Blackie Mini Storage desktop view" /></a>
+										<a href="images/sc-landman-1.jpg" class="image fit gallery"><img src="images/sc-landman-1.jpg" alt="Blackie Mini Storage desktop view" /></a>
 									</figure>
 								</div>
 
 								<div class="4u 12u$(mobile)">
 									<figure class="item">
-										<a href="images/sc-storage-detail.jpg" class="image fit gallery"><img src="images/sc-storage-detail.jpg" alt="Detail view of the Blackie Mini Storage website" /></a>
+										<a href="images/sc-landman-2.jpg" class="image fit gallery"><img src="images/sc-landman-2.jpg" alt="Detail view of the Blackie Mini Storage website" /></a>
 									</figure>
 								</div>
 
 								<div class="4u$ 12u$(mobile)">
 									<figure class="item">
-										<a href="images/sc-storage-small.jpg" class="image fit gallery"><img src="images/sc-storage-small.jpg" alt="Blackie Mini Storage tablet menu" /></a>
+										<a href="images/sc-landman-3.jpg" class="image fit gallery"><img src="images/sc-landman-3.jpg" alt="Blackie Mini Storage tablet menu" /></a>
 									</figure>
 								</div>
 							</div>
