--- a/maxq.html
+++ b/maxq.html
@@ -52,7 +52,7 @@
             <ul class="icons">
                 <li><a href="https://github.com/astranomaly" title="github" class="icon fa-github"><span
                             class="label">Github</span></a></li>
-                <li><a href="https://pixelfed.social/Vesper" title="pixelfed" class="icon fa-instagram"><span
+                <li><a href="https://www.flickr.com/photos/169764173@N04/" title="flickr" class="icon fa-instagram"><span
                             class="label">Photos</span></a></li>
                 <li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span
                             class="label">Twitter</span></a></li>
@@ -95,7 +95,7 @@
                 <h3>Technologies</h3>
                 <p>As the sole web developer at <strong>Max Q Live</strong> for the duration of my stay, my tasks covered all areas of the web stack from design to front-end to back-end to tangentially-related IT. The primary goal was to develop a demo website that could be shown to investors. The website comprised hundreds of pages designed in Adobe Photoshop and written mainly in HTML, CSS, and <a href="https://jquery.com/">jQuery</a>, with portions of PHP added to enable templating and speed <span class="nbs">up production.</span></p>
 
-                <p>Server management was also an occasional part of my job, managing a LAMP (Linux, Apache, MySQL, PHP) server and writing a few Bash scripts to streamline common maintenance tasks. Networking between servers, computers, and video cameras was also often necessary (along with some video editing) since the development of video streaming software is one focus of <span class="nbs">the company.</span></p>
+                <p>Server management was also an occasional part of my job, managing a Linux/Apache/MySQL/PHP (<abbr>LAMP</abbr>) server and writing a few Bash scripts to streamline common maintenance tasks. Networking between servers, computers, and video cameras was also often necessary (along with some video editing) since the development of video streaming software is one focus of <span class="nbs">the company.</span></p>
 
                 <p>Unfortunately, <strong>Max Q Live</strong> is not accessible to the public at <span class="nbs">this time.</span></p>
             </div>
