--- a/userscripts.html
+++ b/userscripts.html
@@ -52,7 +52,7 @@
             <ul class="icons">
                 <li><a href="https://github.com/astranomaly" title="github" class="icon fa-github"><span
                             class="label">Github</span></a></li>
-                <li><a href="https://pixelfed.social/Vesper" title="pixelfed" class="icon fa-instagram"><span
+                <li><a href="https://www.flickr.com/photos/169764173@N04/" title="flickr" class="icon fa-instagram"><span
                             class="label">Photos</span></a></li>
                 <li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span
                             class="label">Twitter</span></a></li>
@@ -123,7 +123,7 @@
                 <div class="row">
                     <div class="4u 12u$(mobile)">
                         <figure class="item">
-                            <a href="images/sc-userscripts.png" class="image fit gallery"><img src="images/sc-userscripts.png"
+                            <a href="images/sc-userscripts.jpg" class="image fit gallery"><img src="images/sc-userscripts.jpg"
                                     alt="CoffeeScript vs JavaScript example" /></a>
                         </figure>
                     </div>
