--- a/twib.html
+++ b/twib.html
@@ -52,7 +52,7 @@
             <ul class="icons">
                 <li><a href="https://github.com/astranomaly" title="github" class="icon fa-github"><span
                             class="label">Github</span></a></li>
-                <li><a href="https://pixelfed.social/Vesper" title="pixelfed" class="icon fa-instagram"><span
+                <li><a href="https://www.flickr.com/photos/169764173@N04/" title="flickr" class="icon fa-instagram"><span
                             class="label">Photos</span></a></li>
                 <li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span
                             class="label">Twitter</span></a></li>
