Updated BMS page

--- a/storage.html
+++ b/storage.html
@@ -93,10 +93,9 @@
                             <p>The responsive framework uses the <a href="https://www.bourbon.io/">Bourbon</a> <span class="fancy">&amp;</span> <a href="https://neat.bourbon.io/">Neat</a> Sass libraries, while the interactive map uses the <a href="https://cloud.google.com/maps-platform/">Google Maps API</a>.
                             Fonts and icons use <a href="https://fonts.google.com/">Google Fonts</a> and <a href="https://fontawesome.com/">Font Awesome</a> respectively.</p>
 
-                            <p>In order to teach myself <a href="https://wordpress.org/">Wordpress</a>, I also created a one-page template duplicating the site. While the front-end remains the same, the backend is powered by Wordpress. (The Google Maps plugin hasn't been updated for this version, however).</p>
+                            <p>In order to teach myself <a href="https://wordpress.org/">Wordpress</a>, I also created a one-page template duplicating the site. While the front-end remains the same, the backend is powered by Wordpress. This is now the official version of the site.</p>
 
                             <a class='button' href="https://blackieministorage.com"><i class="fas fa-external-link-alt"></i>Live Site</a>
-                            <a class='button' href="https://astranomaly.com/bms-wordpress/"><i class="fab fa-wordpress"></i>Wordpress Demo</a>
 
 						</div>
 					</section>
