--- a/userscripts.html
+++ b/userscripts.html
@@ -54,7 +54,7 @@
                             class="label">Github</span></a></li>
                 <li><a href="https://www.flickr.com/photos/169764173@N04/" title="flickr" class="icon fa-instagram"><span
                             class="label">Photos</span></a></li>
-                <li><a href="https://twitter.com/Astranomaly" title="twitter" class="icon fa-twitter"><span
+                <li><a href="https://twitter.com/TheOutpostDev" title="twitter" class="icon fa-twitter"><span
                             class="label">Twitter</span></a></li>
                 <li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span
                             class="label">LinkedIn</span></a></li>
