--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 </div>
                                 <div class='todo'><strong>TO-DO LIST</strong>
                                     <ul>
-                                        <li>Learn Vue, Apollo, Python</li>
+                                        <li>Learn React, Jest, Python</li>
                                         <li><span class="nbs">Build a mobile app</span> <span class="nbs">or game</span></li>
                                         <li><span class="nbs">Explore the world's</span> <span class="nbs">remote locations</span></li>
                                     </ul>
@@ -179,9 +179,9 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Hey, if you want to get in touch&mdash;be it for freelance work, an employee position, or just to talk about cool
+							<p>Hey, if you want to get in touch&mdash;be it for contract work, an employee position, or just to talk about cool
                             ideas&mdash;feel free to send me an email, anytime.</p>
-                            <h3><a href="mailto:hi@theoutpost.dev" target="_blank" rel="noopener noreferrer">hi@theoutpost.dev</a></h3>
+                            <h3><a href="mailto:jon.reimer@theoutpost.dev" target="_blank" rel="noopener noreferrer">jon.reimer@theoutpost.dev</a></h3>
 						</div>
 					</section>
 
