--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<li><a href="https://www.flickr.com/photos/169764173@N04/" title="flickr" class="icon fa-instagram"><span class="label">Photos</span></a></li>
 							<li><a href="https://twitter.com/TheOutpostDev" title="twitter" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:hi@theoutpost.dev" target="_blank" rel="noopener noreferrer" title="email" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:jon.reimer@theoutpost.dev" target="_blank" rel="noopener noreferrer" title="email" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
