--- a/twib.html
+++ b/twib.html
@@ -58,7 +58,7 @@
                             class="label">Twitter</span></a></li>
                 <li><a href="https://ca.linkedin.com/in/jonjreimer" title="linkedin" class="icon fa-linkedin"><span
                             class="label">LinkedIn</span></a></li>
-                <li><a href="mailto:hi@theoutpost.dev" target="_blank" rel="noopener noreferrer" title="email" class="icon fa-envelope"><span
+                <li><a href="mailto:jon.reimer@theoutpost.dev" target="_blank" rel="noopener noreferrer" title="email" class="icon fa-envelope"><span
                             class="label">Email</span></a>
                 </li>
             </ul>
